--- a/package.json
+++ b/package.json
@@ -17,9 +17,21 @@
     "url": "https://github.com/gal717358/web_project_5/issues"
   },
   "homepage": "https://github.com/gal717358/web_project_5#readme",
-  "dependencies": {},
+  "dependencies": {
+    "core-js": "^3.18.2"
+  },
   "devDependencies": {
-    "webpack": "^5.58.0",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.4.0",
+    "cssnano": "^5.0.8",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "postcss-loader": "^6.1.1",
+    "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
   }
